facebook icon added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h3 class="footer-heading">An Open Commitment by Awlad Hossain</h3>
         </div>
         <div class="social-icon">
-            <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt=""></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="../assignment-one/assets/facebook.png" alt=""></a>
             <a href="https://github.com/" target="_blank"><img src="/assets/github.png" alt=""></a>
             <a href="https://www.linkedin.com/" target="_blank"><img src="/assets/linkedin-icon 1.png" alt=""></a>
         </div>
