--- a/index.html
+++ b/index.html
@@ -15,35 +15,88 @@
     <banner class="content">
         <img src="/assets/Group.png" alt="">
         <h1 class="banner-heading">"In the near future, I hope to <br> become a Developer."</h1>
-        <p class="heading-paragraph">The foundational role in software development, responsible for writing, testing, and maintaining code. <br> Software Developers often specialize in a particular programming. </p>
+        <p class="banner-paragraph">The foundational role in software development, responsible for writing, testing, and maintaining code. <br> Software Developers often specialize in a particular programming. </p>
         <button class="banner-btn">Contact with me</button>
     </banner>
 </div>
 <!-------------------banner Section Ends----------------------------->
 
+<!-------------------My Web Development Section Starts----------------------------->
+<div class="dev-container">
+    <div class="dev-content">
+        <h2 class="heading-two">Why Web Development??</h2>
+        <p class="heading-paragraph">A major part of a Web Developer's job is taking input from various sources and using their creativity to bring those ideas to life.</p>
+    </div>
+
+    <div>
+        <section class="dev-inside-items">
+            <div class="leftsite-text">
+                <h3 class="heading-h3">I will Do Coding and <br>Change The World</h3>
+                <p class="heading-sub-para">Web development refers to building and maintaining websites.</p>
+                <button class="dev-btn">Learn More</button>
+            </div>
+            <div class="rightsite-image">
+                <img src="assets/Layer_1.png" alt="">
+            </div>
+        </section>
+
+        <section class="dev-inside-items second-items">
+
+            <div class="rightsite-image second-image">
+                <img src="assets/Group 3.png" alt="">
+            </div>
+            <div class="leftsite-text">
+                <h3 class="heading-h3">I will help People by creating Modern Web System</h3>
+                <p class="heading-sub-para">Web development refers to building and maintaining websites.</p>
+                <button class="dev-btn">Learn More</button>
+            </div>
+            
+        </section>
+
+        <section class="dev-inside-items third-item">
+            <div class="leftsite-text">
+                <h3 class="heading-h3">I will Do Coding and <br>Change The World</h3>
+                <p class="heading-sub-para">Web development refers to building and maintaining websites.</p>
+                <button class="dev-btn">Learn More</button>
+            </div>
+            <div class="rightsite-image">
+                <img src="assets/Group 4.png" alt="">
+            </div>
+        </section>
+
+
+
+
+    </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<!-------------------My Web Development Section Ends----------------------------->
 
 </main>
-
-
-
+<!-------------------Footer Section Starts----------------------------->
 <footer class="footer-container">
     <div class="footer-contains">
         <div>
             <h3 class="footer-heading">An Open Commitment by Awlad Hossain</h3>
         </div>
         <div class="social-icon">
-            <a href="https://www.facebook.com/" target="_blank"><img src="../assignment-one/assets/facebook.png" alt=""></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt=""></a>
             <a href="https://github.com/" target="_blank"><img src="/assets/github.png" alt=""></a>
             <a href="https://www.linkedin.com/" target="_blank"><img src="/assets/linkedin-icon 1.png" alt=""></a>
         </div>
-
     </div>
-
-
-
 </footer>
-
-
-    
+<!-------------------Footer Section Ends----------------------------->
 </body>
 </html>
