insperation section added

--- a/index.html
+++ b/index.html
@@ -63,10 +63,20 @@
                 <img src="assets/Group 4.png" alt="">
             </div>
         </section>
+    </div>
+</div>
 
+<!-------------------My Web Development Section Ends----------------------------->
 
+<!-- -------------------My Insperation section Starts ----------------------------->
 
-
+<div class="insperation-container">
+    <div class="insperation-content">
+        <h2 class="heading-two">My Inspiration</h2>
+        <p class="heading-paragraph">My Inspiration is a great one more than my inspiration it has become my best friend through my steps of life. </p>
+    </div>
+    <div class="vedio-url">
+        <iframe width="930" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=wTpPLrJAmn0EydD-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
 </div>
@@ -76,12 +86,10 @@
 
 
 
+<!-------------------- My Insperation section Ends ------------------------------>
 
 
 
-
-
-<!-------------------My Web Development Section Ends----------------------------->
 
 </main>
 <!-------------------Footer Section Starts----------------------------->
@@ -91,7 +99,7 @@
             <h3 class="footer-heading">An Open Commitment by Awlad Hossain</h3>
         </div>
         <div class="social-icon">
-            <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt=""></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt=""></a>
             <a href="https://github.com/" target="_blank"><img src="/assets/github.png" alt=""></a>
             <a href="https://www.linkedin.com/" target="_blank"><img src="/assets/linkedin-icon 1.png" alt=""></a>
         </div>
