--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </div>
         <div class="social-icon">
             <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt=""></a>
-            <a href="https://github.com/" target="_blank"><img src="/assets/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/" target="_blank"><img src="/assets/linkedin-icon 1.png" alt=""></a>
+            <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a>
         </div>
     </div>
 </footer>
