--- a/index.html
+++ b/index.html
@@ -81,15 +81,53 @@
 
 </div>
 
-
-
-
-
-
 <!-------------------- My Insperation section Ends ------------------------------>
 
+<!-------------------- My Current Target section Starts ------------------------------>
+
+<section class="target-container">
+    <div class="target-content">
+        <h2 class="target-heading">My Current Target</h2>
+        <p class="target-paragraph">Learn how to grow my web development agency by attracting more clients, delivering more value, and ultimately increasing revenue.</p>
+    </div>
+    <div class="target-portfullio">
+        <div class="first-target">
+            <img src="assets/html.png" alt="">
+            <h4 class="first-target-heading">HTML</h4>
+            <p class="first-target-paragraph"> HTML is the standard markup language for Web pages. 
+            </p>
+            <a href="https://www.w3schools.com/html/" target="_blank"><span class="learn-btn"><u><b>Learn More</b></u></span></a>
+        </div>
 
 
+        <div class="second-target">
+        <div><img src="assets/css.png" alt="">
+            <h4 class="first-target-heading">CSS</h4>
+            <p class="first-target-paragraph">  CSS is the language we use to style an HTML document. 
+            </p>
+            <a href="https://https://www.w3schools.com/css/" target="_blank"><span class="learn-btn"><u><b>Learn More</b></u></span></a>
+        </div>
+    </div>
+    <div class="third-target">
+        <div>
+            <img src="assets/js.png" alt="">
+            <h4 class="first-target-heading">JavaScript</h4>
+            <p class="first-target-paragraph">JS is interpreted programming language. 
+            </p>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><span class="learn-btn"><u><b>Learn More</b></u></span></a>
+        </div>
+    </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+<!-------------------- My Current Target section Ends ------------------------------>
 
 </main>
 <!-------------------Footer Section Starts----------------------------->
