support section added

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h4 class="first-target-heading">CSS</h4>
             <p class="first-target-paragraph">  CSS is the language we use to style an HTML document. 
             </p>
-            <a href="https://https://www.w3schools.com/css/" target="_blank"><span class="learn-btn"><u><b>Learn More</b></u></span></a>
+            <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><span class="learn-btn"><u><b>Learn More</b></u></span></a>
         </div>
     </div>
     <div class="third-target">
@@ -120,14 +120,32 @@
     </div>
 </section>
 
-
-
-
-
-
-
-
 <!-------------------- My Current Target section Ends ------------------------------>
+
+<!-------------------- Support section Starts ------------------------------>
+
+<section class="support-container">
+    <div class="support-content">
+        <h2 class="support-heading">I need Support</h2>
+        <p class="support-para">Support is a price level where a downtrend may pause due to <br> a concentration of buying interest.</p>
+        <div>
+            <input type ="text" placeholder="Suggest me any feedback for me" name="" id="" class="support-input">
+            <button class="support-btn">Submit</button>
+        </div>
+        
+
+    </div>
+    
+</section>
+
+
+
+
+
+<!-------------------- Support section Ends ------------------------------>
+
+
+
 
 </main>
 <!-------------------Footer Section Starts----------------------------->
