--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <!-------------------banner Section Ends----------------------------->
 
-<!-------------------My Web Development Section Starts----------------------------->
+<!-------------------Why Web Development Section Starts----------------------------->
 <div class="dev-container">
     <div class="dev-content">
         <h2 class="heading-two">Why Web Development??</h2>
@@ -33,7 +33,7 @@
             <div class="leftsite-text">
                 <h3 class="heading-h3">I will Do Coding and <br>Change The World</h3>
                 <p class="heading-sub-para">Web development refers to building and maintaining websites.</p>
-                <button class="dev-btn">Learn More</button>
+                <a href="https://www.programming-hero.com/" target="_blank"><button class="dev-btn">Learn More</button></a>
             </div>
             <div class="rightsite-image">
                 <img src="assets/Layer_1.png" alt="">
@@ -48,7 +48,7 @@
             <div class="leftsite-text">
                 <h3 class="heading-h3">I will help People by creating Modern Web System</h3>
                 <p class="heading-sub-para">Web development refers to building and maintaining websites.</p>
-                <button class="dev-btn">Learn More</button>
+                <a href="https://pixso.net/" target="_blank"><button class="dev-btn">Learn More</button></a>
             </div>
             
         </section>
@@ -57,7 +57,7 @@
             <div class="leftsite-text">
                 <h3 class="heading-h3">I will Do Coding and <br>Change The World</h3>
                 <p class="heading-sub-para">Web development refers to building and maintaining websites.</p>
-                <button class="dev-btn">Learn More</button>
+                <a href="https://fonts.google.com/" target="_blank"><button class="dev-btn">Learn More</button></a>
             </div>
             <div class="rightsite-image">
                 <img src="assets/Group 4.png" alt="">
@@ -66,7 +66,7 @@
     </div>
 </div>
 
-<!-------------------My Web Development Section Ends----------------------------->
+<!-------------------Why Web Development Section Ends----------------------------->
 
 <!-- -------------------My Insperation section Starts ----------------------------->
 
