Banner btn updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-
 <main>
     <header></header>
 <!-------------------banner Section starts---------------------------->
@@ -16,7 +15,7 @@
         <img src="/assets/Group.png" alt="">
         <h1 class="banner-heading">"In the near future, I hope to <br> become a Developer."</h1>
         <p class="banner-paragraph">The foundational role in software development, responsible for writing, testing, and maintaining code. <br> Software Developers often specialize in a particular programming. </p>
-        <button class="banner-btn">Contact with me</button>
+        <a href="#footer"><button class="banner-btn">Contact with me</button></a>
     </banner>
 </div>
 <!-------------------banner Section Ends----------------------------->
@@ -27,7 +26,6 @@
         <h2 class="heading-two">Why Web Development??</h2>
         <p class="heading-paragraph">A major part of a Web Developer's job is taking input from various sources and using their creativity to bring those ideas to life.</p>
     </div>
-
     <div>
         <section class="dev-inside-items">
             <div class="leftsite-text">
@@ -39,7 +37,6 @@
                 <img src="assets/Layer_1.png" alt="">
             </div>
         </section>
-
         <section class="dev-inside-items second-items">
 
             <div class="rightsite-image second-image">
@@ -68,6 +65,9 @@
 
 <!-------------------Why Web Development Section Ends----------------------------->
 
+
+
+
 <!-- -------------------My Insperation section Starts ----------------------------->
 
 <div class="insperation-container">
@@ -82,6 +82,9 @@
 </div>
 
 <!-------------------- My Insperation section Ends ------------------------------>
+
+
+
 
 <!-------------------- My Current Target section Starts ------------------------------>
 
@@ -98,7 +101,6 @@
             </p>
             <a href="https://www.w3schools.com/html/" target="_blank"><span class="learn-btn"><u><b>Learn More</b></u></span></a>
         </div>
-
 
         <div class="second-target">
         <div><img src="assets/css.png" alt="">
@@ -122,8 +124,10 @@
 
 <!-------------------- My Current Target section Ends ------------------------------>
 
-<!-------------------- Support section Starts ------------------------------>
 
+
+
+<!-------------------- Support section Starts ------------------------------>
 <section class="support-container">
     <div class="support-content">
         <h2 class="support-heading">I need Support</h2>
@@ -132,24 +136,14 @@
             <input type ="text" placeholder="Suggest me any feedback for me" name="" id="" class="support-input">
             <button class="support-btn">Submit</button>
         </div>
-        
-
     </div>
-    
 </section>
-
-
-
-
 
 <!-------------------- Support section Ends ------------------------------>
 
-
-
-
 </main>
 <!-------------------Footer Section Starts----------------------------->
-<footer class="footer-container">
+<footer class="footer-container" id="footer">
     <div class="footer-contains">
         <div>
             <h3 class="footer-heading">An Open Commitment by Awlad Hossain</h3>
