--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+j<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <!-------------------banner Section starts---------------------------->
 <div class="banner-container">
     <banner class="content">
-        <img src="/assets/Group.png" alt="">
+        <img src="assets/Group.png" alt="">
         <h1 class="banner-heading">"In the near future, I hope to <br> become a Developer."</h1>
         <p class="banner-paragraph">The foundational role in software development, responsible for writing, testing, and maintaining code. <br> Software Developers often specialize in a particular programming. </p>
         <a href="#footer"><button class="banner-btn">Contact with me</button></a>
