--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-j<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -38,7 +38,6 @@ j<!DOCTYPE html>
             </div>
         </section>
         <section class="dev-inside-items second-items">
-
             <div class="rightsite-image second-image">
                 <img src="assets/Group 3.png" alt="">
             </div>
@@ -47,7 +46,6 @@ j<!DOCTYPE html>
                 <p class="heading-sub-para">Web development refers to building and maintaining websites.</p>
                 <a href="https://pixso.net/" target="_blank"><button class="dev-btn">Learn More</button></a>
             </div>
-            
         </section>
 
         <section class="dev-inside-items third-item">
@@ -67,7 +65,6 @@ j<!DOCTYPE html>
 
 
 
-
 <!-- -------------------My Insperation section Starts ----------------------------->
 
 <div class="insperation-container">
@@ -75,10 +72,10 @@ j<!DOCTYPE html>
         <h2 class="heading-two">My Inspiration</h2>
         <p class="heading-paragraph">My Inspiration is a great one more than my inspiration it has become my best friend through my steps of life. </p>
     </div>
+
     <div class="vedio-url">
         <iframe width="930" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=wTpPLrJAmn0EydD-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-
 </div>
 
 <!-------------------- My Insperation section Ends ------------------------------>
@@ -87,7 +84,6 @@ j<!DOCTYPE html>
 
 
 <!-------------------- My Current Target section Starts ------------------------------>
-
 <section class="target-container">
     <div class="target-content">
         <h2 class="target-heading">My Current Target</h2>
@@ -102,7 +98,7 @@ j<!DOCTYPE html>
             <a href="https://www.w3schools.com/html/" target="_blank"><span class="learn-btn"><u><b>Learn More</b></u></span></a>
         </div>
 
-        <div class="second-target">
+    <div class="second-target">
         <div><img src="assets/css.png" alt="">
             <h4 class="first-target-heading">CSS</h4>
             <p class="first-target-paragraph">  CSS is the language we use to style an HTML document. 
@@ -123,7 +119,6 @@ j<!DOCTYPE html>
 </section>
 
 <!-------------------- My Current Target section Ends ------------------------------>
-
 
 
 
@@ -155,6 +150,5 @@ j<!DOCTYPE html>
         </div>
     </div>
 </footer>
-<!-------------------Footer Section Ends----------------------------->
 </body>
 </html>
